# knot

./: .gitignore  Knot.files  configure.ac
doc/: reference.rst
src/: Makefile.am
src/contrib/: atomic.h
src/knot/common/: stats.c  stats.h
src/knot/conf/: conf.c  conf.h  scheme.c  scheme.h
src/knot/ctl/: commands.c  commands.h
src/knot/events/handlers/: notify.c  refresh.c
src/knot/modules/: Makefile.am  geoip.c  geoip.h  query_stats.c  query_stats.h  rrl.c  rrl.h
src/knot/modules/dnsproxy/: dnsproxy.c  dnsproxy.h
src/knot/modules/dnstap/: dnstap.c  dnstap.h
src/knot/modules/noudp/: noudp.c  noudp.h
src/knot/modules/online_sign/: online_sign.c  online_sign.h
src/knot/modules/rosedb/: rosedb.c  rosedb.h
src/knot/modules/synth_record/: synth_record.c  synth_record.h
src/knot/modules/whoami/: whoami.c  whoami.h
src/knot/nameserver/: axfr.c  axfr.h  ixfr.c  notify.c  process_query.c  query_module.c  query_module.h
src/knot/query/: layer.h  query.c  query.h  requestor.c  requestor.h
src/knot/server/: journal.c  journal.h  server.c  tcp-handler.c
src/knot/zone/: zone-load.c  zone.c  zone.h  zonedb.c
src/libknot/: codes.h  rrset-dump.c  tsig-op.h
src/libknot/packet/: pkt.c  pkt.h
src/libknot/rrtype/: opt.c  opt.h
src/utils/common/: exec.c
src/utils/keymgr/: options.c
src/utils/knot-journalprint/: knot-journalprint.c
src/utils/knotc/: commands.c  process.c
src/utils/knotd/: main.c
tests/: Makefile.am  journal.c  requestor.c  test_conf.h
tests-extra/tests/basic/remote/: test.py
tests-extra/tests/modules/rrl/: test.py
tests-extra/tools/dnstest/: module.py  params.py  server.py
tests/libknot/: test_edns.c  test_edns_ecs.c
